--- a/index.html
+++ b/index.html
@@ -65,12 +65,14 @@
             Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt
             ut&nbsp;laoreet dolore.
           </p>
-          <button class="btn hero-btn btn-reset">
-            FREE 30&nbsp;DAY TRIAL
-          </button>
-          <span class="hero-secure">
-            SSL secured connection
-          </span>
+          <div class="hero-wrapper flex">
+            <button class="btn hero-btn btn-reset">
+              FREE 30&nbsp;DAY TRIAL
+            </button>
+            <span class="hero-secure">
+              SSL secured connection
+            </span>
+          </div>
         </div>
       </div>
     </section>
@@ -292,7 +294,7 @@
         </h2>
         <address class="contacts-address">
           <ul class="contacts-list list-reset flex">
-            <li class="contacts-item flex">
+            <li class="contacts-item flex contacts-item-location">
               <strong class="contacts-item-caption">
                 Visit Us
               </strong>
@@ -300,7 +302,7 @@
                 Duis autem vel eum iriure dolor in&nbsp;hendrerit in&nbsp;vulputate velit.
               </p>
             </li>
-            <li class="contacts-item flex">
+            <li class="contacts-item flex contacts-item-phone">
               <strong class="contacts-item-caption">
                 Call Us
               </strong>
@@ -311,7 +313,7 @@
                 +7 (123) 456-78-90
               </a>
             </li>
-            <li class="contacts-item flex">
+            <li class="contacts-item flex contacts-item-mail">
               <strong class="contacts-item-caption">
                 Email Us
               </strong>
