--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
   </header>
 
   <main class="main">
+
     <section id="hero" class="hero">
       <div class="container">
         <div class="hero-content flex">
@@ -76,6 +77,7 @@
         </div>
       </div>
     </section>
+
     <section id="services" class="services section-offset">
       <div class="container">
         <h2 class="section-title services-title">
@@ -144,6 +146,7 @@
         </ul>
       </div>
     </section>
+
     <section id="articles" class="articles section-offset">
       <div class="container">
         <h2 class="section-title articles-title">
@@ -217,6 +220,7 @@
         </ul>
       </div>
     </section>
+
     <section id="clients" class="clients section-offset">
       <div class="container">
         <h2 class="section-title clients-title">
@@ -285,8 +289,8 @@
           </li>
         </ul>
       </div>
-
     </section>
+
     <section id="contacts" class="contacts section-offset">
       <div class="container">
         <h2 class="section-title contacts-title">
@@ -328,9 +332,48 @@
         </address>
       </div>
     </section>
-    <!-- <section id="join-us" class="join us">
 
-        </section> -->
+    <section id="join-us" class="join-us section-offset">
+      <div class="container">
+        <h2 class="section-title join-us-title">
+          Join us
+        </h2>
+        <p class="section-descr join-us-descr">
+          Take control of&nbsp;your paid subscriptions today!
+        </p>
+        <form action="https://jsonplaceholder.typicode.com/posts" method="post" class="form">
+          <div class="form-top">
+            <div class="form-left">
+              <input class="form-input" type="text" name="name" placeholder="Name" required>
+              <input class="form-input" type="email" name="email" placeholder="E-mail" required>
+              <input class="form-input" type="tel" name="phone" placeholder="Phone" required>
+              <select class="form-select" name="country">
+                <option value="Country" disabled selected>Сountry</option>
+                <option value="United Kingdom">United Kingdom</option>
+                <option value="United States">United States</option>
+                <option value="France">France</option>
+                <option value="Germany">Germany</option>
+                <option value="Spain">Spain</option>
+                <option value="Estonia">Estonia</option>
+              </select>
+            </div>
+            <div class="form-right">
+              <textarea class="form-textarea" name="comment" placeholder="Comment"></textarea>
+            </div>
+          </div>
+          <div class="form-bottom">
+            <div class="form-wrapper">
+              <button class="btn btn-reset form-button">Get Started</button>
+              <label class="form-check">
+                <input type="checkbox" required>
+                I&nbsp;agree with the <a href="#">user agreement</a>
+              </label>
+            </div>
+          </div>
+        </form>
+      </div>
+    </section>
+
   </main>
 
   <footer class="footer">
