fixed typos in class names

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         </h2>
         <ul class="clients__list list-reset flex">
           <li class="clients__item flex">
-            <p class="client__descr">
+            <p class="clients__descr">
               Duis autem vel eum iriure dolor in&nbsp;hendrerit in&nbsp;vulputate velit esse molestie consequat, vel
               illum dolore eu&nbsp;feugiat nulla facilisis at&nbsp;vero eros et&nbsp;accumsan et&nbsp;iusto odio
               dignissim qui blandit odio dignissim qui blandit molestie consequat.
@@ -256,7 +256,7 @@
             </div>
           </li>
           <li class="clients__item flex">
-            <p class="client__descr">
+            <p class="clients__descr">
               Duis autem vel eum iriure dolor in&nbsp;hendrerit in&nbsp;vulputate velit esse molestie consequat, vel
               illum dolore eu&nbsp;feugiat nulla facilisis at&nbsp;vero eros et&nbsp;accumsan et&nbsp;iusto odio
               dignissim qui blandit odio dignissim qui blandit molestie consequat.
@@ -276,7 +276,7 @@
             </div>
           </li>
           <li class="clients__item flex">
-            <p class="client__descr">
+            <p class="clients__descr">
               Duis autem vel eum iriure dolor in&nbsp;hendrerit in&nbsp;vulputate velit esse molestie consequat, vel
               illum dolore eu&nbsp;feugiat nulla facilisis at&nbsp;vero eros et&nbsp;accumsan et&nbsp;iusto odio
               dignissim qui blandit odio dignissim qui blandit molestie consequat.
@@ -394,7 +394,7 @@
           Copyright &copy;2017. All Right Reserved
         </small>
       </div>
-      <div class="footr__right flex">
+      <div class="footer__right flex">
         <nav class="footer__nav nav" title="Второстепенное меню">
           <ul class="nav__list list-reset flex">
             <li class="nav__item">
